--- a/lib/views/index.erb
+++ b/lib/views/index.erb
@@ -1,18 +1,25 @@
+<!DOCTYPE html>
 <html>
 <head>
+	<meta charset="UTF-8" />
 	<title>The Gossip Project</title>
 </head>
 <body>
-	<h1>Mon super site de gossip !</h1>
-	<% gossips.each_with_index do |gossip_obj, current_index| %>
-	<p>
-		<a href="/gossips/<%=current_index%>">Voici la page du potin n°<%= current_index + 1%></a> <br />
-		auteur : <%= gossip_obj.author%>
-		<br />
-		contenu : <%= gossip_obj.content%>
-	</p>
-	<%end%>
-	<p>Tu peux <a href='/gossips/new/' >créer de nouveaux potins</a>
-	</p>
-</body>
-</html>
+	<div id="globale_container">
+		<h1>Mon super site de gossip !</h1>
+		<div id="globale_gossip">
+			<% gossips.each_with_index do |gossip_obj, current_index| %>
+
+			<p class="gossip_bloc">
+				<a href="/gossips/<%=current_index%>" class="gossip_link">Voici la page du potin n°<%= current_index + 1%></a> <br />
+				auteur : <%= gossip_obj.author%>
+				<br />
+				contenu : <%= gossip_obj.content%>
+			</p>
+			<%end%>
+		</div>
+		<p class="footer_link">Tu peux <a href='/gossips/new/' >créer de nouveaux potins</a>
+		</p>
+	</div>
+</body>	
+</htmxl>
