--- a/lib/views/new_gossip.erb
+++ b/lib/views/new_gossip.erb
@@ -1,22 +1,31 @@
 <html>
 <head>
 	<title>The Gossip Project</title>
+	<meta charset="UTF-8" />
+	<link rel="stylesheet" href="<%=url('css/style.css')%>" />
 </head>
 <body>
-	<h1>Ici tu crée un gossip !</h1><br />
-	<form action="/gossips/new" method="post" class="form_new">
-		Ton nom (ou ton pseudo) :<br />
-		<input type="text" name="author" placeholder="Ton pseudo">
-		<br />
-		Ton potin  :<br />
-		<textarea type="text" name="content" value="Mouse" style="width: 500px; height: 300px;" placeholder="(ne mets pas de '<', '>'' dans ton potin stp c'est chiant)"></textarea>
-		<br /><br />
-		<input type="submit" value="Balance ton potin">
-	</form> 
-
-	<p class="footer_link">
-		<a href="/">Pour revenir à l'accueil c'est ici</a>
-	</p>
+	<div id="globale_container">
+		<div id="nav_bloc_flex">
+			<h1>Ici tu crée un gossip !</h1>
+			<nav>
+				<div class="button"><a href="/">revenir à l'accueil</a></div>
+				<div class="button"><a href='/gossips/new/' >créer un gossip</a></div>
+			</nav>
+		</div>
+		<div id="globale_gossip_flex">
+			<form action="/gossips/new" method="post" class="form_new">
+				Ton nom (ou ton pseudo) :<br />
+				<input type="text" name="author" placeholder="Ton pseudo">
+				<br />
+				Ton gossip  :<br />
+				<textarea type="text" name="content" style="width:550px; height:300px;" placeholder="(ne mets pas de '<', '>'' dans ton potin stp c'est chiant)" /></textarea>
+				<br /><br />
+				<input type="submit" value="Balance ton potin">
+			</form> 
+		</div>
+	</div>
+	
 
 </body>
 </html>
