--- a/lib/views/submited_gossip.erb
+++ b/lib/views/submited_gossip.erb
@@ -1,16 +1,23 @@
 <html>
 <head>
+	<meta charset="UTF-8" />
+	<link rel="stylesheet" href="<%=url('css/style.css')%>" />
 	<title>The Gossip Project</title>
+	<meta http-equiv="refresh" content="5; url=/" />
 </head>
 <body>
-	<h1>Ici tu peux voir le gossip que tu viens d'ajouter !</h1><br />
-	<p>Bravo, tu viens d'ajouter un gossip (on ne diras pas que c'est toi hein ;)</p><br />
-	<p>Auteur : <%=author%></p><br />
-	<p>Contenu : <%=content%></p><br />
-
-	<p class="footer_link">Tu peux <a href='/gossips/new/' >créer de nouveaux potins</a><br />
-		<a href="/">Pour revenir à l'accueil c'est ici</a>
-	</p>
-
+	<div id="globale_container">
+		<div id="nav_bloc_flex">
+			<h1>Ici tu peux voir le gossip que tu viens d'ajouter !</h1><br />
+			<nav>
+				<div class="button"><a href="/">revenir à l'accueil</a></div>
+				<div class="button"><a href='/gossips/new/' >créer un gossip</a></div>
+			</nav>
+		</div>
+		<div id="globale_gossip_flex">
+			<p>Bravo, tu viens d'ajouter un gossip (on ne diras pas que c'est toi hein ;)</p><br />
+			<p>Retour au menu dans 5 secondes</p>
+		</div>
+	</div>
 </body>
 </html>
