--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,36 +10,99 @@ body, html{
 }
 #globale_container{
 	padding: 0px 0px 0px 0px;
+	margin: 10px 10px 10px 10px;
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+	grid-gap: 0px;
+}
+#nav_bloc_flex{
+	padding-left: 10px;
+	margin-left: 10px;
+	margin-right: 10px;
+	padding-right: 10px;
+	display: flex;
+	flex-direction: row;
+	align-content: space-between;
+	justify-content: space-between;
+	align-items: center;
+}
+#globale_gossip_flex{
+	padding: 5px 5px 5px 5px;
 	margin: 0px 0px 0px 0px;
 	flex: 1;
-	display: grid;
-	grid-gap: 0px;
-	grid-template-columns: 1fr 6fr 3fr;
-	grid-template-rows: repeat(8, 1fr);
-	border: 2px green solid;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	flex-wrap: wrap;
 }
-h1{
-	padding: 0px 0px 0px 10px;
-	grid-column: 2 / span 1;
-	grid-row: 1 / span 1;
+#form_flex{
+	display: flex;
+	flex-direction: column;
 }
-#globale_gossip{
-	padding: 0px 0px 0px 0px;
-	margin: 0px 0px 0px 0px;
-	grid-column: 2 / span 1;
-	grid-row: 2 / -1;
-}
-.gossip_bloc{
-	border: 1px red solid;
+.gossip_bloc_flex{
+	width: 250px;
+	height: 250px;
+	border: 2px solid rgb(200, 50, 50);
+	margin: 10px 10px 10px 10px;
 	padding: 10px 10px 10px 10px;
+	border-radius: 15px 15px 15px 15px;
+	box-shadow: 3px 3px 5px rgba(200, 50, 50, 0.5);
 }
-.footer_link{
-	padding: 0px 0px 0px 0px;
-	margin: 0px 0px 0px 0px;
-	border: 1px red solid;
-	grid-column: 2 / span 1;
-	grid-row: -1 / -1;
+.button{
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+	margin-left: 20px;
+	width: 200px;
+	height: 30px;
+	border: 1px solid;
+	border-radius: 6px;
+	border-color: rgb(100,50, 50);
+	background-color: rgba(200, 50, 50, 0.6);
 }
 body{
 	background-color: rgb(240,240,240);
+}
+h1{
+	padding: 0px 0px 0px 10px;
+}
+nav{
+	display: flex;
+	flex-direction: row;
+	padding: 0px 10px 0px 10px;
+}
+a{
+	color: black;
+}
+#nav_bloc_flex a, #nav_bloc_flex a:visited{
+	font-size: 1.2em;
+
+}
+#globale_gossip_flex a, #globale_gossip_flex a:visiter{
+
+}
+.comment{
+	border: 1px solid rgba(200,50,50,0.7);
+	margin: 5px 5px 5px 5px;
+}
+input, textarea{
+    font-family:Arial, sans-serif;
+    font-size:17px;
+    overflow:hidden;
+    -moz-transition-duration:200ms;
+    -o-transition-duration:200ms;
+    -webkit-transition-duration:200ms;
+    transition-duration:200ms;
+    border-radius:2px;
+    box-shadow:3px 3px 3px rgba(200, 50, 50, 0.6);
+    border: 1px solid rgba(200, 50, 50, 0.6);
+}
+input[type="input"]{
+	border: none;
+	font-size: 15px;
+}
+p[class~="author"]{
+	text-decoration: underline;
 }
