--- a/public/css/style.css
+++ b/public/css/style.css
@@ -99,10 +99,18 @@ input, textarea{
     box-shadow:3px 3px 3px rgba(200, 50, 50, 0.6);
     border: 1px solid rgba(200, 50, 50, 0.6);
 }
+textarea{
+    width: 500px;
+    height: 300px;
+}
 input[type="input"]{
 	border: none;
 	font-size: 15px;
 }
 p[class~="author"]{
 	text-decoration: underline;
+}
+p[class~="coontent"]
+{
+	word-wrap: auto;
 }
